--- a/front/bet.html
+++ b/front/bet.html
@@ -4,6 +4,7 @@
 
 <head>
   <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.7.1/dist/web3.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@alch/alchemy-web3@latest/dist/alchemyWeb3.min.js"></script>
   <script type="text/javascript">
 
   async function test() {
