--- a/front/bet.html
+++ b/front/bet.html
@@ -33,7 +33,7 @@
 
 
           //new contract object
-          var managerAbi =  [
+          var managerAbi = [
             {
               "inputs": [
                 {
@@ -236,8 +236,14 @@
                 {
                   "indexed": false,
                   "internalType": "uint256[]",
-                  "name": "rewards",
+                  "name": "winnerCount",
                   "type": "uint256[]"
+                },
+                {
+                  "indexed": false,
+                  "internalType": "int256[]",
+                  "name": "rewards",
+                  "type": "int256[]"
                 },
                 {
                   "indexed": false,
@@ -855,21 +861,22 @@
             }
           ];
 
-          var managerContractAddress = '0x149bd24c00A24b3E2FdB46D17740f0aA1E99d2cD';
-          var erc20Address = "0x472E4F7984D8816D2F8b07dAbE41971aaEBC9447";
+          var managerContractAddress = '0x2384773fE5906B45317e3F4aced7d22E4f30298c';
+          var erc20Address = "0x73D66092F96F808cEDF399c22BE732318D347FCe";
 
           var managerContract = new web3.eth.Contract(managerAbi, managerContractAddress);
           var erc20Contract = new web3.eth.Contract(erc20Abi, erc20Address);
 
-          //测试下注,提前创建一张4u桌子，hash为 103849476647844347348057178463885426286861641356672598979366477044129000181847
+          //测试下注,提前创建一张2u桌子，hash为 72504804741705690193767731652589755094368416868913544711784094133993040218870
           console.log("accounts[0]", accounts[0]);
-          let tableHash = "103849476647844347348057178463885426286861641356672598979366477044129000181847";
+          let tableHash = "72504804741705690193767731652589755094368416868913544711784094133993040218870";
           //假设下一注, 号码选择2
           let count = 1, number = 2;
           //approve
-          let amount = Web3.utils.toWei('4', 'ether');
+          let amount = Web3.utils.toWei('2', 'ether');
           let allowance = await erc20Contract.methods.allowance(accounts[0], managerContractAddress).call();
           console.log("allowance", allowance);
+
           let gasNeeded =await erc20Contract.methods.approve(managerContractAddress, amount).estimateGas({from: accounts[0]});
           let gasPrice = await web3.eth.getGasPrice();
           console.log("gasPrice", gasPrice);
@@ -882,7 +889,7 @@
           console.log("approve result", result1);
 
           //joinTable
-          console.log("joinTable");
+          console.log("start joinTable");
           let gasPrice2 = await web3.eth.getGasPrice();
           let gasNeeded2 = await managerContract.methods.joinTableV2(count, number, tableHash).estimateGas({from: accounts[0]});
           console.log("gasPrice", gasPrice2);
