--- a/front/index.html
+++ b/front/index.html
@@ -16,8 +16,8 @@
                     chainId: '0x13881',
                     chainName: 'Mumbai',
                     nativeCurrency: {
-                        name: 'matic',
-                        symbol: 'matic',
+                        name: 'MATIC',
+                        symbol: 'MATIC',
                         decimals: 18,
                     },
                     rpcUrls: ['https://polygon-mumbai.g.alchemy.com/v2/fDqBg0l2Ws7oC9ImoKnI0gbwdpfyqGHD/'],
